B-1: fixes
